Added Header Documentation

--- a/virtual-classroom/src/main/webapp/resources/mytheme/css/registration.css
+++ b/virtual-classroom/src/main/webapp/resources/mytheme/css/registration.css
@@ -1,3 +1,15 @@
+/*
+
+\brief This is CSS for registration view
+\author Chris Forehand
+\date 3/20/14
+\verbatim
+	Test Cases: 
+	
+\endverbatim
+
+*/
+
 #ctrlRegistration
 {
 	position: relative; 
