--- a/virtual-classroom/src/main/webapp/resources/mytheme/css/Controls/RegistrationControl.css
+++ b/virtual-classroom/src/main/webapp/resources/mytheme/css/Controls/RegistrationControl.css
@@ -1,3 +1,15 @@
+/*
+
+\brief This is CSS for the registration control
+\author Chris Forehand
+\date 3/20/14
+\verbatim
+	Test Cases: 
+	
+\endverbatim
+
+*/
+
 .vc-registration-control
 {
 	width: 100%; 
