--- a/virtual-classroom/src/main/webapp/resources/mytheme/css/home.css
+++ b/virtual-classroom/src/main/webapp/resources/mytheme/css/home.css
@@ -1,3 +1,15 @@
+/*
+
+\brief This is CSS for the home view
+\author Chris Forehand
+\date 3/20/14
+\verbatim
+	Test Cases: 
+	
+\endverbatim
+
+*/
+
 #ctrlLogin
 {
 	position: relative; 
