--- a/virtual-classroom/src/main/webapp/resources/mytheme/css/main.css
+++ b/virtual-classroom/src/main/webapp/resources/mytheme/css/main.css
@@ -1,3 +1,15 @@
+/*
+
+\brief This is CSS for main site wide styling classes, such as navigation menu
+\author Chris Forehand
+\date 3/20/14
+\verbatim
+	Test Cases: 
+	
+\endverbatim
+
+*/
+
 @CHARSET "US-ASCII";
 body
 {
