--- a/virtual-classroom/src/main/webapp/resources/mytheme/css/Controls/RegistrationControl.css
+++ b/virtual-classroom/src/main/webapp/resources/mytheme/css/Controls/RegistrationControl.css
@@ -1,28 +1,17 @@
-/*
-
-\brief This is CSS for the registration control
-\author Chris Forehand
-\date 3/20/14
-\verbatim
-	Test Cases: 
-	
-\endverbatim
-
-*/
-
-.vc-registration-control
+.emotion-registration-control
 {
+	position: relative; 
 	width: 100%; 
 	height: 100%; 
 }
 
-.vc-registration-control .pnl-container
+.emotion-registration-control .pnl-container
 {
 	height: 100%;
 	width: 100%;
 }
 
-.vc-registration-control .reg-form-label
+.emotion-registration-control .reg-form-label
 {
 	display: block;
 	height: 60px;
@@ -31,37 +20,37 @@
 	width: 375px;
 }
 
-.vc-registration-control .reg-form-input
+.emotion-registration-control .reg-form-input
 {
 	position: absolute;
 	left: 122px;
-	width: 250px;
+	width: 249px;
 	height: 30px;
 	font-size: 14px;
 }
 
-.vc-registration-control .btn-form
+.emotion-registration-control .btn-form
 {
 	height: 40px;
 	width: 120px; 
 }
 
-.vc-registration-control .pnl-button-container
+.emotion-registration-control .pnl-button-container
 {
 	position: relative;
 	width: auto;
 	height: 40px;
-	left: 122px; 
+	margin-left: 128px;
 }
 
-.vc-registration-control .pnl-forgot-password
+.emotion-registration-control .pnl-forgot-password
 {
 	float: right;
 	padding-top: 10px;
 	font-size: 14px;
 }
 
-.vc-registration-control .lnk-register-account
+.emotion-registration-control .lnk-register-account
 {
 	padding-right: 43px; 
 }
@@ -69,4 +58,22 @@
 #btnSubmit
 {
 	margin-right: 10px; 
+}
+
+.emotion-registration-control .pnl-error-container
+{
+	position: relative;
+	height: 20px; 
+	width: 100%; 
+	padding-bottom: 10px; 
+}
+
+.emotion-registration-control .error
+{
+	color: red;
+}
+
+.emotion-registration-control .success
+{
+	color: green;
 }
